Forgot to load staticfiles

--- a/templates/portfolio/popups.html
+++ b/templates/portfolio/popups.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 {% for photo in photos %}
     <section id="popup-portfolio-{{ photo.pk }}" class="popup-window-container">
         <div class="section-content">
