Corrected invalid usage of 'forloop.counter1', since it's 'forloop.counter'

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -17,7 +17,7 @@
                         <div class="post-content">
                             <p>{{ post.description }}</p>
                         </div>
-                        <a href="#" class="button-border popup-window-trigger" data-popup="#popup-blog-{{ forloop.counter1 }}">Read More</a>
+                        <a href="#" class="button-border popup-window-trigger" data-popup="#popup-blog-{{ forloop.counter }}">Read More</a>
                     </article>
                 {% endfor %}
                 </div><!-- #blog-slider -->
