--- a/templates/services.html
+++ b/templates/services.html
@@ -43,7 +43,7 @@
                                         <p>{{ skill.description }}</p>
                                     </div>
                                 </div>
-                    {% if forloop.counter1|divisibleby:2 %}
+                    {% if forloop.counter|divisibleby:2 %}
                             </div><!-- .row -->
                         </div><!-- .col-xl-6 -->
                     {% endif %}
