Corrected bad closing p tag

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
                 <div class="col-md-3 onscroll-animate content-column" data-animation="fadeInUp">
                     <address>
                     {% if object.contact_address_street_1 %}
-                        <p>{{ object.contact_address_street_1 }}/p>
+                        <p>{{ object.contact_address_street_1 }}</p>
                     {% endif %}
                     {% if object.contact_address_city %}
                         <p>{{ object.contact_address_city }}, {{ object.contact_address_state_or_province }} {{ object.contact_address_postal_code }}</p>
